habit tracker kan habits laten zien en toevoegen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "*": ["./@mf-types/*"]
     }
   },
-  "include": ["src", "Header.tsx", "Header.tsx", "header.tsx"],
+  "include": ["src", "Header.tsx"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
