--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "cross-env NODE_ENV=development rspack serve"
   },
   "devDependencies": {
-    "@rspack/cli": "~1.2.0",
+    "@rspack/cli": "^1.7.6",
     "@rspack/core": "~1.2.0",
     "@rspack/plugin-react-refresh": "~1.0.1",
     "@tailwindcss/postcss": "^4.0.3",
@@ -25,9 +25,26 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@module-federation/enhanced": "^0.8.9",
+    "@module-federation/enhanced": "^2.0.0",
+    "axios": "^1.13.5",
+    "express": "^5.2.1",
+    "pg": "^8.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zephyr-rspack-plugin": "^0.0.50"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/4lexks/MAM05.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/4lexks/MAM05/issues"
+  },
+  "homepage": "https://github.com/4lexks/MAM05#readme"
 }
