Rare error verholpen

--- a/package.json
+++ b/package.json
@@ -2,37 +2,30 @@
   "name": "superapp",
   "version": "0.0.1",
   "scripts": {
-    "build": "NODE_ENV=production rspack build",
-    "build:dev": "NODE_ENV=development rspack build",
-    "build:start": "cd dist && rspack serve",
-    "start": "cross-env NODE_ENV=development rspack serve"
+    "build": "rsbuild build",
+    "dev": "rsbuild dev",
+    "preview": "rsbuild preview",
+    "start": "rsbuild dev"
   },
   "devDependencies": {
-    "@rspack/cli": "^1.7.6",
-    "@rspack/core": "~1.2.0",
-    "@rspack/plugin-react-refresh": "~1.0.1",
+    "@rsbuild/core": "^1.7.3",
+    "@rsbuild/plugin-react": "^1.4.5",
     "@tailwindcss/postcss": "^4.0.3",
     "@types/luxon": "^3.7.1",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.2.13",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.1.0",
-    "cross-env": "^10.1.0",
-    "css-loader": "^7.1.2",
     "postcss": "^8.2.1",
-    "postcss-loader": "^8.0.0",
-    "react-refresh": "^0.14.0",
     "tailwindcss": "^4.0.3",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@module-federation/enhanced": "^2.0.0",
     "axios": "^1.13.5",
     "express": "^5.2.1",
+    "luxon": "^3.7.2",
     "pg": "^8.18.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zephyr-rspack-plugin": "^0.0.50"
+    "react-dom": "^19.0.0"
   },
   "description": "",
   "main": "index.js",
@@ -43,7 +36,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/4lexks/MAM05/issues"
   },
