--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,9 @@
     "resolveJsonModule": true,
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true,
-    "paths": {
-      "*": ["./@mf-types/*"]
-    }
+    "allowImportingTsExtensions": true
   },
-  "include": ["src", "Header.tsx"],
+  "include": ["src"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
