--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rsbuild/plugin-react": "^1.4.5",
     "@tailwindcss/postcss": "^4.0.3",
     "@types/luxon": "^3.7.1",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.1.0",
@@ -20,12 +21,16 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@mui/x-charts": "^8.27.0",
+    "@recharts/devtools": "^0.0.8",
     "axios": "^1.13.5",
     "express": "^5.2.1",
     "luxon": "^3.7.2",
+    "papaparse": "^5.5.3",
     "pg": "^8.18.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^3.7.0"
   },
   "description": "",
   "main": "index.js",
